perf(container): 空容器改用专用空单例 Collections.emptyXxx
将返回/赋值/传入中的 JDK 空 List.of()/Set.of()/Map.of() 统一替换为
预先创建的共享空单例 Collections.emptyList()/emptySet()/emptyMap()，
每次引用零分配、零内存，避免空容器工厂在热路径上的冗余开销。

仅替换空参的 X.of()；非空 List.of(x) 与 Guava ImmutableX.of() 保留。
同步更新 PERFORMANCE.md 容器规范第 11 条（空容器用专用空单例）。